[MWPW-191327] Fix for Text overlapping issue in upload-marquee for international locales

--- a/creativecloud/blocks/upload-marquee/upload-marquee.css
+++ b/creativecloud/blocks/upload-marquee/upload-marquee.css
@@ -227,9 +227,13 @@
   font-size: 40px;
   font-style: normal;
   font-weight: 800;
-  line-height: 98%;
+  line-height: 125%;
   letter-spacing: -1.8px;
   margin-bottom: 16px;
+}
+
+:root:lang(en) .upload-marquee-block .upload-marquee-layout .upload-marquee-left .upload-marquee-content h1 {
+  line-height: 98%;
 }
 
 .upload-marquee-block .upload-marquee-layout .upload-marquee-left .upload-marquee-content p {
